# 2019-vision-rpi

./: .gitignore  5708-vision  README.md  compile_local.sh  compile_pi.sh  main.cpp  start_streaming.sh  startup_launch.sh  win_start_streaming.bat
.wpilib/: wpilib_preferences.json
calib_data/: logitech_1080.xml  logitech_720.xml  logitech_c920.xml
mac-stuff/: Info.plist
mac-stuff/2019-vision.xcodeproj/: project.pbxproj
mac-stuff/2019-vision.xcodeproj/xcshareddata/xcschemes/: 2019-vision.xcscheme
src/: CMakeLists.txt  DataComm.cpp  DataComm.h  DataComm.hpp  Makefile  RedContourGrip.cpp  RedContourGrip.hpp  RioComm.cpp  RioComm.h  VideoHandler.cpp  VideoHandler.hpp  grip.cpp  grip.hpp  main.cpp  streamer.cpp  streamer.hpp  vision.cpp  vision.hpp
